# rstms-ehandler

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  requirements-dev.txt  tox.ini
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  readme.rst  rstms_ehandler.rst
rstms_ehandler/: __init__.py  ehandler.py  example.py  version.py
tests/: __init__.py  test_cli.py
